--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,19 @@
 @import '@fontsource/fira-mono';
 
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	outline: 0px solid var(--color-theme-2);
+	transition: 0.2s;
+	line-height: 1.5;
+	letter-spacing: 0.6px;
+}
+*:focus-visible {
+	outline: 5px solid var(--color-theme-2);
+	/* box-shadow: 0 0 1rem 0.5rem var(--color-theme-2); */
+}
+
 :root {
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -30,62 +44,67 @@ body {
 		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
 }
 
-h1,
-h2,
-p {
-	font-weight: 400;
+blockquote {
+	border-left: 2px solid var(--color-theme-2);
+	padding: 0.5rem;
+	margin: 0.5rem 0;
+
 }
 
 p {
 	line-height: 1.5;
 }
-
+li {
+	margin-left: 1.5rem;
+}
 a {
 	color: var(--color-theme-1);
-	text-decoration: none;
 }
 
-a:hover {
-	text-decoration: underline;
+table {
+	/* border-collapse: collapse; */
+	border-spacing: 0;
+	margin: 0.5rem 0;
+	border-radius: 5px;
+	border: 1px solid gray;
+}
+td, th {
+	border-left: 1px solid gray;
+}
+td:first-of-type, th:first-of-type {
+	border-left:none;
+}
+th {
+	padding: 0.25rem 0.5rem;
+	background-color: var(--color-bg-0);
+}
+td {
+	border-top: 1px solid gray;
+	padding: 0.25rem 0.5rem;
+}
+tr:nth-of-type(even) {
+	background-color: var(--color-bg-1);
 }
 
-h1 {
-	font-size: 2rem;
-	text-align: center;
-}
-
-h2 {
-	font-size: 1rem;
-}
-
+/* a wrapper for code-blocks */
 pre {
 	font-size: 16px;
 	font-family: var(--font-mono);
-	background-color: rgba(255, 255, 255, 0.45);
+	border: 1px solid gray;
 	border-radius: 3px;
-	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
+	box-shadow: 2px 2px 6px var(--color-theme-2);
 	padding: 0.5em;
+	margin: 0.5rem 0;
 	overflow-x: auto;
 	color: var(--color-text);
 }
-
-.text-column {
-	display: flex;
-	max-width: 48rem;
-	flex: 0.6;
-	flex-direction: column;
-	justify-content: center;
-	margin: 0 auto;
+pre > code {
+	border: none;
 }
-
-input,
-button {
-	font-size: inherit;
-	font-family: inherit;
-}
-
-button:focus:not(:focus-visible) {
-	outline: none;
+code {
+	border: 1px solid gray;
+	border-radius: 3px;
+	padding: 0.1rem 0.25rem;
 }
 
 @media (min-width: 720px) {
