--- a/src/app.css
+++ b/src/app.css
@@ -4,30 +4,34 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-	outline: 0px solid var(--color-theme-2);
+	outline: 0px solid var(--color-accent);
 	transition: 0.2s;
 	line-height: 1.5;
 	letter-spacing: 0.6px;
 }
 *:focus-visible {
-	outline: 5px solid var(--color-theme-2);
-	/* box-shadow: 0 0 1rem 0.5rem var(--color-theme-2); */
+	outline: 5px solid var(--color-accent);
+	/* box-shadow: 0 0 1rem 0.5rem var(--color-accent); */
 }
 
 :root {
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--color-bg-0: rgb(202, 216, 228);
-	--color-bg-1: hsl(209, 36%, 86%);
-	--color-bg-2: hsl(224, 44%, 95%);
-	--color-theme-1: #ff3e00;
-	--color-theme-2: #4075a6;
+	--color-bg-0: rgb(202, 228, 202);
+	--color-bg-1: hsl(118, 36%, 86%);
+	--color-bg-2: hsl(147, 44%, 95%);
+	--color-accent: rgb(252, 226, 202);
+	--color-accent-strong: rgb(196, 143, 94);
 	--color-text: rgba(0, 0, 0, 0.7);
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
 	color: var(--color-text);
+
+	--shadow:  0.5rem 0.5rem 1rem #0a0a0a79;
+	--shadow-small:  0.25rem 0.25rem 0.5rem #0a0a0a79;
+	--border-style: 1px solid var(--color-accent-strong);
 }
 
 body {
@@ -45,7 +49,7 @@ body {
 }
 
 blockquote {
-	border-left: 2px solid var(--color-theme-2);
+	border-left: 2px solid var(--color-accent);
 	padding: 0.5rem;
 	margin: 0.5rem 0;
 
@@ -58,7 +62,7 @@ li {
 	margin-left: 1.5rem;
 }
 a {
-	color: var(--color-theme-1);
+	color: var(--color-accent);
 }
 
 table {
@@ -92,7 +96,7 @@ pre {
 	font-family: var(--font-mono);
 	border: 1px solid gray;
 	border-radius: 3px;
-	box-shadow: 2px 2px 6px var(--color-theme-2);
+	box-shadow: 2px 2px 6px var(--color-accent);
 	padding: 0.5em;
 	margin: 0.5rem 0;
 	overflow-x: auto;
@@ -113,17 +117,16 @@ img {
 button {
 	text-align: center;
 	border-radius: 0.25rem;
-	padding: 0.5rem 1rem;
-	margin: 0.5rem auto;
+	padding: 0.5rem 2rem;
+	margin: 2rem auto;
 	font-weight: bolder;
 	font-size: 1rem;
+	box-shadow: var(--shadow-small);
+	border: var(--border-style);
+	background-color: var(--color-accent);
 }
-
-
-@media (min-width: 720px) {
-	h1 {
-		font-size: 2.4rem;
-	}
+button:hover {
+	cursor:pointer;
 }
 
 .visually-hidden {
