--- a/src/app.css
+++ b/src/app.css
@@ -54,9 +54,15 @@ blockquote {
 	margin: 0.5rem 0;
 
 }
-
+h1,h2,h3,h4,h5,h6 {
+	margin-top: 0.5rem;
+}
 p {
 	line-height: 1.5;
+}
+ul, ol {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
 }
 li {
 	margin-left: 1.5rem;
